Footer info added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
        <textarea id="campo1" disabled></textarea>
        <textarea id="campo2" disabled></textarea>
     </div>
+    <footer>
+        Este sitio web fue desarrollado por Imanol
+    </footer>
 </body>
 <script src="index.js"></script>
 </html>
