deleted a few elements

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         <P id="texto2">
             NUNCA MÁS USES UNA CONTRASEÑA INSEGURA 
         </P>
-        <button id="generador" onclick="contraseñaAleatoria()">Generar Contraseña</button> <br>
-       <textarea id="campo1" disabled></textarea>
-       <textarea id="campo2" disabled></textarea>
+        <button id="generador" onclick="contraseñaAleatoria()">Generar Contraseña</button> 
+        <br>
+
+        <label>
+            <textarea id="campo1" disabled></textarea>
+        </label>
+
+        <label> <textarea id="campo2" disabled></textarea>
+        </label>
     </div>
     <br>
     <footer>
