--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <P id="texto2">
             NUNCA MÁS USES UNA CONTRASEÑA INSEGURA 
         </P>
-        <button id="generador" onclick="contraseñaAleatoria()">Generar Contraseña</button> 
+        <button id="generador" onclick="contraseñaAleatoria()">Generar Contraseñas</button> 
         <br>
 
         <label>
